--- a/styles.css
+++ b/styles.css
@@ -145,18 +145,19 @@ header {
     object-fit: fill;
 }
 
-.animation-border {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-}
 
 .profile-photo {
     width: 100%;
     height: 100%;
     border-radius: 50%;
     z-index: 2;
+    transition: box-shadow 0.3s ease;
+    transition: transform 0.4s ease-in-out;
+}
+
+.profile-photo:hover {
+    transform: scale(1.1);
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
 }
 
 .right-side {
@@ -217,6 +218,13 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: transform 0.4s ease-in-out;
+
+}
+
+.about-photo:hover {
+    transform: scale(1.1);
+
 }
 
 .download-button {
